Update server/internal/server/cluster_snapshot.go
